--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Web Development Life Start</h1>
+    <img src="image/1.jpg" alt="photo">
+    <img src="image/2.jpg" alt="photo">
+    <img src="image/food.jpg" alt="photo">
     
 </body>
 </html>
